JumpScript/tests/baselines/reference/uncaughtCompilerError2.errors.txt
tests/cases/compiler/uncaughtCompilerError2.jump(2,5): error TS1109: Expression expected.


==== tests/cases/compiler/uncaughtCompilerError2.jump (1 errors) ====
    function getObj() {
       ().toString();
        ~
!!! error TS1109: Expression expected.
    }
    